@@ -19,7 +19,6 @@
 package org.apache.tinkerpop.gremlin.server;
 
 import io.netty.channel.ChannelHandler;
-import io.netty.channel.EventLoopGroup;
 import org.apache.tinkerpop.gremlin.server.util.ServerGremlinExecutor;
 
 /**
@@ -35,5 +34,5 @@ public interface Channelizer extends ChannelHandler {
     /**
      * This method is called just after the {@code Channelizer} is initialized.
      */
-    public void init(final ServerGremlinExecutor<EventLoopGroup> serverGremlinExecutor);
+    public void init(final ServerGremlinExecutor serverGremlinExecutor);
 }
